--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Create Zip
         run: |
-          $PluginPath = "Encore/bin/Release"
+          $PluginPath = "Encore/bin/Release/net10.0-windows"
           $OutputZip = "Encore.zip"
           $Files = @(
             "$PluginPath/Encore.dll",
